wait before execute + actually can see text + blinking cursor

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -8,6 +8,11 @@ body {
     animation: backgroundGradient 23s ease infinite;
 }
 
+body .container {
+    color: white;
+    font-size: 60px;
+}
+
 
 @-webkit-keyframes backgroundGradient {
     0%{background-position:0% 50%}
@@ -28,4 +33,26 @@ body {
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
+}
+
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
 }
