--- a/css/index_style.css
+++ b/css/index_style.css
@@ -93,3 +93,48 @@ hr {
     border-bottom: 1px solid #E7E9ED;
     margin-bottom: 70px;
 }
+.thumb{
+    background:#E6E6E6;
+  	position: relative;
+	overflow: hidden;
+	display: block;
+    line-height: 20px;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+.thumb .caption{
+	padding: 9px;
+  	opacity:0;
+    -moz-opacity: 0.5;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.4);
+    width: 100%;
+    height: 100%;
+    color: #fff !important;
+  	-webkit-transition: opacity 0.2s ease-in-out;
+    -moz-transition: opacity 0.2s ease-in-out;
+    -o-transition: opacity 0.2s ease-in-out;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.thumb .caption .content {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+    height: 50%;
+    width: 50%;
+}
+
+.btn {
+    min-width: 75px;
+}
+
+.second-container{
+	margin-top: 20px;
+}
