--- a/css/index_style.css
+++ b/css/index_style.css
@@ -4,8 +4,14 @@ body {
     overflow-x: hidden;
     color: white;
     font-family: 'Signika', sans-serif;
+    overflow-y: hidden;
+    animation: lockScroll 0.1s ease 6s 1 normal forwards;
 }
 
+@keyframes lockScroll {
+    0% {overflow-y: hidden;}
+    100% { overflow-y: auto;}
+}
 body .animate {
         animation: HiAnimation 2s ease 0s 1 normal forwards;
         margin-bottom: 3%;
