--- a/css/index_style.css
+++ b/css/index_style.css
@@ -69,6 +69,16 @@ body .animate {
     outline: none;
 }
 
+.leftButtonDiv {
+    height: 650px;
+    margin-left: 10px;
+}
+
+.leftButton {
+    font-size: 6em;
+    margin-top: 250px;
+}
+
 .circle {
     border-radius: 50%;
     width: 500px;
