--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,7 +1,6 @@
 
 body {
     background: #FE5F55;
-    overflow-x: hidden;
     color: white;
     font-family: 'Signika', sans-serif;
     overflow-y: hidden;
@@ -23,6 +22,17 @@ body .animate {
     transition: color 0.2s;
 }
 
+.leftButtonDiv {
+    height: 650px;
+    margin-left: 10px;
+}
+
+.leftButton {
+    font-size: 6em;
+    margin-top: 250px;
+}
+
+
 .btn-link:hover {
     color:  rgb(98, 98, 98);
 }
@@ -33,6 +43,11 @@ body .animate {
 .newback {
     background-color: #18B155;
     padding-bottom: 50px;
+}
+
+.animation_element {
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .animation_element.in-view.slide-right {
@@ -123,6 +138,10 @@ body .animate {
     100% { font-size: 2em; position: relative; top: 0px; opacity: 1;}
 }
 
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
 
 hr {
     display: block;
@@ -210,7 +229,7 @@ hr {
     z-index: 1; /* Stay on top */
     top: 0;
     left: 0;
-    background-color: #111; /* Black*/
+    background-color: #307ECB;
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
