logic fix + new colour

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -241,7 +241,7 @@ body .animate {
     z-index: 1; /* Stay on top */
     top: 0;
     right: 0;
-    background-color: #307ECB;
+    background-color: #18B155;
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
