--- a/css/index_style.css
+++ b/css/index_style.css
@@ -233,6 +233,9 @@ body .animate {
     cursor: pointer;
 }
 
+.ui-loading .ui-loader { display: block; }
+.ui-loader { display: none; position: absolute; opacity: .85; z-index: 100; left: 50%; width: 200px; margin-left: -130px; margin-top: -35px; padding: 10px 30px; }
+
 .rightSidenav {
     overflow-y: hidden;
     height: 100%; /* 100% Full-height */
