--- a/css/index_style.css
+++ b/css/index_style.css
@@ -76,8 +76,20 @@ body .animate {
     animation: CircleAppear 2s ease 3s 1 normal forwards;
 }
 
-.margin {
-    margin-bottom: 2.3%;
+.backLeft {
+    font-size: 6em;
+}
+
+.cp_embed_wrapper {
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.vertical-align {
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .margin a {
