--- a/css/index_style.css
+++ b/css/index_style.css
@@ -92,6 +92,12 @@ body .animate {
     align-items: center;
 }
 
+.square {
+    width: 100%;
+    height: 400px;
+    background: white;
+}
+
 .margin a {
     color: white;
     transition: color 0.2s;
@@ -99,6 +105,10 @@ body .animate {
 
 .margin a:hover {
     color:  rgb(98, 98, 98);
+}
+
+.about {
+    margin-bottom: 8%;
 }
 
 
@@ -216,7 +226,6 @@ body .animate {
 
 /* The side navigation menu */
 .leftSidenav {
-    overflow-y: hidden;
     height: 100%; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
