--- a/css/index_style.css
+++ b/css/index_style.css
@@ -13,7 +13,7 @@ body {
 }
 body .animate {
         animation: HiAnimation 2s ease 0s 1 normal forwards;
-        margin-bottom: 3%;
+        margin-bottom: 1.5%;
 }
 
 
@@ -59,6 +59,10 @@ body .animate {
     font-size: 6em;
 }
 
+.upButton {
+    font-size: 6em;
+}
+
 
 .btn-link:focus {
     color: rgb(98, 98, 98);
@@ -77,6 +81,10 @@ body .animate {
 }
 
 .backLeft {
+    font-size: 6em;
+}
+
+.backRight {
     font-size: 6em;
 }
 
@@ -108,7 +116,7 @@ body .animate {
 }
 
 .about {
-    margin-bottom: 8%;
+    margin-bottom: 0;
 }
 
 
@@ -234,7 +242,7 @@ body .animate {
     left: 0;
     background-color: #307ECB;
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
+    padding-top: 50px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
 
@@ -307,7 +315,7 @@ body .animate {
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
     bottom: 0;
-    background-color: #307ECB;
+    background-color: #ee4266;
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
