--- a/css/index_style.css
+++ b/css/index_style.css
@@ -60,7 +60,7 @@ body .animate {
 }
 
 .upButton {
-    font-size: 6em;
+    font-size: 4em;
 }
 
 
@@ -303,7 +303,9 @@ body .animate {
     margin-left: 50px;
 }
 
-
+.aboutText {
+    margin-bottom: 20px;
+}
 
 #body {
     transition: margin-left .5s;
@@ -318,6 +320,11 @@ body .animate {
     background-color: #ee4266;
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+.bottomNav h3 {
+    margin-right: 55px;
+    margin-left: 55px;
 }
 
 .bottomNav a {
