--- a/css/index_style.css
+++ b/css/index_style.css
@@ -323,8 +323,8 @@ body .animate {
 }
 
 .bottomNav h3 {
-    margin-right: 55px;
-    margin-left: 55px;
+    margin-right: 10%;
+    margin-left: 10%;
     font-size: 158%;
 }
 
