fixing center image!!!

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -119,7 +119,10 @@ body .animate {
     margin-bottom: 0;
 }
 
-
+.outer {
+    position: relative;
+    right: 0px;
+}
 
 .inner {
     width: 450px;
